--- a/frontend/src/app/components/user-profile/user-game-list/user-game-list.component.html
+++ b/frontend/src/app/components/user-profile/user-game-list/user-game-list.component.html
@@ -1,9 +1,10 @@
 <app-generic-user-game-list
+      (changeInDataEvent)="onChangeGameEvent($event)"
       [isCurrentUserList]="isLoggedInUserList"
-      [header]="'USER BOARD GAME LIST'"
+      [header]="'USER\'S BOARD GAMES'"
       [userInfo]="userInfo"
       [userId]="userId"
       [toggleButtonFn]="toogleButton"
-      [buttonName]="'Favourite games'"
+      [buttonName]="'User\'s favourite games'"
 > 
 </app-generic-user-game-list>
