--- a/frontend/src/app/components/gameDetail/game-detail/game-detail.component.css
+++ b/frontend/src/app/components/gameDetail/game-detail/game-detail.component.css
@@ -1,7 +1,9 @@
 .game-detail-box{
     padding: 2rem;
-    width: 100%;
-    height: 100%;
+    min-width: 300px;
+    max-width: 1550px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .overlay {
