--- a/frontend/src/app/components/user-profile/generic-user-game-list/generic-user-game-list.component.css
+++ b/frontend/src/app/components/user-profile/generic-user-game-list/generic-user-game-list.component.css
@@ -1,7 +1,14 @@
+.cont{
+    min-width: 300px;
+    max-width: 1550px;
+    margin-left: auto;
+    margin-right: auto;
+
+}
 .data-box{
     padding: 0 2rem 2rem 2rem;
-    width: 100%;
     height: 100%;
+    width: 100%;
 }
 
 .overlay {
@@ -63,12 +70,12 @@
 
 .nofav{
     color: #8a8a8a;
-    margin-left: 10px;
+    margin-right: 10px;
     font-size: 19px;
 }
 .fav{
     color: #ff0000 ;
-    margin-left: 10px;
+    margin-right: 10px;
     font-size: 19px;
 }
 
@@ -225,10 +232,12 @@ input::placeholder {
 }
 
 .game-grid-action {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     margin-bottom: 0;
+}
+.game-user-rating , .delete-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* 
@@ -249,7 +258,7 @@ input::placeholder {
     }
 }
 
-@media (min-width: 992px) and (max-width: 1700px) {
+@media screen and (min-width: 992px) and (max-width: 1700px) {
     .game-grid-item img {
       max-width: 90%; 
     }
@@ -289,7 +298,7 @@ input::placeholder {
      .fav-game-link{
         width: 100%;
         display: flex;
-        justify-content: end;
+        justify-content: flex-end;
      }
 }
 
