add user profile

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,16 +1,15 @@
 <div class="wrapper">
-<div>
-  <app-navbar></app-navbar>
-</div>
-
-<div class="content">
-  <router-outlet></router-outlet>
-  <p-confirmDialog defaultFocus="reject" [style]="{width: '40vw'}"></p-confirmDialog>
-</div>
-<p-toast position="top-right"></p-toast> 
-<footer>
-  © Natalia Kolbusz
-</footer>
+  <div class="navbar">
+    <app-navbar></app-navbar>
+  </div>
+  <div class="content">
+    <router-outlet></router-outlet>
+    <p-confirmDialog defaultFocus="reject" [style]="{width: '40vw'}"></p-confirmDialog>
+  </div>
+  <p-toast position="top-right"></p-toast> 
+  <footer>
+    © Natalia Kolbusz
+  </footer>
 </div>
 
 
