--- a/frontend/src/app/components/nav/navbar/navbar.component.html
+++ b/frontend/src/app/components/nav/navbar/navbar.component.html
@@ -1,14 +1,14 @@
-<div class="card ">
-  <p-menubar [model]="items" [style]="{ backgroundColor: '#00539C'}">
-    <ng-template pTemplate="start">
-      <div class="board-game-header">
-        <img src="..\..\..\assets\images\logott.png" alt="Logo" class="logo" width="30">
-        <span class="board-game-title">Board Game App</span>
-      </div>
-    </ng-template>
-    <ng-template pTemplate="end">
-      
-  </ng-template>
-  </p-menubar>
+<div class="cont">
+  <div class="card">
+    <p-menubar [model]="items" [style]="{ backgroundColor: '#00539C'}">
+      <ng-template pTemplate="start">
+        <div class="board-game-header">
+          <img src="..\..\..\assets\images\logott.png" alt="Logo" class="logo" width="30">
+          <span class="board-game-title">Board Game App</span>
+        </div>
+      </ng-template>
+      <ng-template pTemplate="end">     
+      </ng-template>
+    </p-menubar>
+  </div>
 </div>
-
