--- a/frontend/src/app/components/user-profile/generic-user-game-list/generic-user-game-list.component.css
+++ b/frontend/src/app/components/user-profile/generic-user-game-list/generic-user-game-list.component.css
@@ -165,7 +165,20 @@ input::placeholder {
     background-color: #f19364;
 }
 
+.favourites-label {
+    font-size: 16px;
+    display: block;    
+    padding: 0;
+    margin: 20px 0 20px 0;
+}
 
+.favourites-label .pi-heart-fill{
+    cursor: pointer; 
+}
+
+.header-add-form .right{
+    cursor: pointer;
+}
 .user-info div{
     align-self: center;
 }
