--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -4,32 +4,41 @@
     min-height: 100vh; 
     width: 100%;
     flex: 1;
-  }
-  
-  .content {
-    flex: 1;
-    z-index: 500;
-    background-color: #ffffff; 
-    margin-top: 80px;
-  }
-  
-  footer {
-    background-color: #00539C;
-    color: #ffffff;
-    padding: 10px;
-    text-align: center;
-    align-items: center;
-    height: 40px;
-    width: 100%;
-    margin-bottom: 0;
-    z-index: 1000;
-  }
+}
+
+.navbar{
+  width: 100%;
+  background-color: #00539C;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+}
+
+.content {
+  flex: 1;
+  z-index: 500;
+  background-color: #ffffff; 
+  margin-top: 80px;
+}
+
+footer {
+  background-color: #00539C;
+  color: #ffffff;
+  padding: 10px;
+  text-align: center;
+  align-items: center;
+  height: 40px;
+  width: 100%;
+  margin-bottom: 0;
+  z-index: 1000;
+}
 
 
-  @media only screen and (max-width: 1000px) {
-    .content{
-      margin-top: 70px;
-    }
+@media only screen and (max-width: 1000px) {
+  .content{
+    margin-top: 70px;
   }
+}
 
   /* Royal Blue #00539C 034c8b , Peach #EEA47F f19364 font: 495057*/
