--- a/frontend/src/app/components/game/game.component.html
+++ b/frontend/src/app/components/game/game.component.html
@@ -1,5 +1,5 @@
 <div class="data-box">  
-    <p-dataView #dv [value]="games" [paginator]="true" [rows]="5" [rowsPerPageOptions]="[5, 10, 15]" filterBy="name">
+    <p-dataView #dv [value]="games" [paginator]="true" [rows]="10" [rowsPerPageOptions]="[10, 25, 50, 100]" filterBy="name">
         <ng-template pTemplate="header">
             <div class="flex flex-col md:flex-row justify-content-between">
                 <div class="mb-2 md:mb-0">
