--- a/frontend/src/app/components/nav/navbar/navbar.component.css
+++ b/frontend/src/app/components/nav/navbar/navbar.component.css
@@ -23,11 +23,10 @@
   background-color: #00539C;
   border: 0; 
   border-radius: 0; 
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 1000;
+  min-width: 300px;
+  max-width: 1920px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .board-game-header {
