--- a/frontend/src/app/components/user-profile/profile/profile.component.html
+++ b/frontend/src/app/components/user-profile/profile/profile.component.html
@@ -1,28 +1,52 @@
 <div class="cont">
     <div class="data-box">
-        Profil usera: {{userId}}
-        <p *ngIf="isLoggedInUserProfile">To także jest twój własny profil</p>
+        <!-- Profil usera: {{userId}}
+        <p *ngIf="isLoggedInUserProfile">To także jest twój własny profil</p> -->
+        <div class="header"> USER PROFILE</div>
+        <div class="user">
+            <div class="user-left-details">
+                <div class="image" style="width: 0px">
+                    <img src="../../../../assets/images/avatars/avatar2.svg" style="width: 150px"/>
+                </div>
+                <div class="user-add-button">
+                    <button pButton class="p-button-secondary p-button-text">Add user to favourite</button>
+                </div>
+            </div>
+            <div class="user-right-details">
+                <div class="user-nickname">User: {{userInfo.nickName}}</div>
+                <div class="user-email">Email: {{userInfo.email}}</div>
+            </div>
+        </div>
         <div class="user-data-box">
             <div class="header">
-                <h3> User's first five games </h3>
+                <h3> User's games </h3>
             </div>
-            <div class="detail-box">
-                <ng-container *ngFor="let game of userGameListFirst5; let i = index">
-                    <div class="game" >
-                        <div class="image-box">
-                            <img [src]="game.imageUrl" [alt]="game.name" [routerLink]="['/games', game.boardGameId]"/>
+            <div class="grid detail-box">
+                <ng-container *ngIf="userInfo.userBoardGames.length > 0 ; else emptyList" >
+                    <ng-container *ngFor="let game of userGameListFirst5; let i = index">
+                        <div class="col-6 md:col-4 lg:col-3 xl:col-2">
+                            <div class="game" >
+                                <div class="image-box">
+                                    <img [src]="game.imageUrl" [alt]="game.name" [routerLink]="['/games', game.boardGameId]"/>
+                                </div>
+                                <div class="game-name"> 
+                                    {{game.name}}
+                                </div>
+                            </div>
                         </div>
-                        <div class="game-name"> 
-                            {{game.name}}
-                        </div>
-                    </div>
-                    <ng-container *ngIf="i === userGameListFirst5.length - 1 && userGameListFirst5.length < userInfo.userBoardGames.length">
-                        <div class="ellipsis"[routerLink]="['/userGameList', userId]">...</div>
+                        <ng-container *ngIf="i === userGameListFirst5.length - 1 && userGameListFirst5.length < userInfo.userBoardGames.length">
+                            <div class="ellipsis"[routerLink]="['/userGameList', userId]">...</div>
+                        </ng-container>
                     </ng-container>
+                    <div class="button">
+                        <button pButton class="p-button-secondary p-button-text" [routerLink]="['/userGameList', userId]">See all details</button>
+                    </div>
                 </ng-container>
-            </div>
-            <div class="button">
-                <button pButton class="p-button-secondary p-button-text" [routerLink]="['/userGameList', userId]">See all details</button>
+                <ng-template #emptyList>
+                    <div class="no-result">
+                        No results found
+                    </div>
+                </ng-template>
             </div>
         </div>
         <div class="cont-2">
@@ -30,25 +54,34 @@
         </div>
         <div class="user-data-box">
             <div class="header">
-                <h3> User's first five favourite games </h3>
+                <h3> User's favourite games </h3>
             </div>
-            <div class="detail-box">
-                <ng-container *ngFor="let game of userFavGameListFirst5; let i = index">
-                    <div class="game">
-                        <div class="image-box">
-                            <img [src]="game.imageUrl" [alt]="game.name" [routerLink]="['/games', game.boardGameId]"/>
+            <div class="grid detail-box">
+                <ng-container *ngIf="userInfo.userBoardGames.length > 0 ; else emptyList" >
+                    <ng-container *ngFor="let game of userFavGameListFirst5; let i = index">
+                        <div class="col-6 md:col-4 lg:col-3 xl:col-2">
+                            <div class="game" >
+                                <div class="image-box">
+                                    <img [src]="game.imageUrl" [alt]="game.name" [routerLink]="['/games', game.boardGameId]"/>
+                                </div>
+                                <div class="game-name"> 
+                                    {{game.name}}
+                                </div>
+                            </div>
                         </div>
-                        <div class="game-name"> 
-                            {{game.name}}
-                        </div>
-                    </div>
-                    <ng-container *ngIf="i === userFavGameListFirst5.length - 1 && userFavGameListFirst5.length < totalFavGames">
-                        <div class="ellipsis"[routerLink]="['/userFavouriteGameList', userId]">...</div>
+                        <ng-container *ngIf="i === userGameListFirst5.length - 1 && userGameListFirst5.length < totalFavGames">
+                            <div class="ellipsis"[routerLink]="['/userGameList', userId]">...</div>
+                        </ng-container>
                     </ng-container>
+                    <div class="button">
+                        <button pButton class="p-button-secondary p-button-text" [routerLink]="['/userFavouriteGameList', userId]">See all details</button>
+                    </div>
                 </ng-container>
-            </div>
-            <div class="button">
-                <button pButton class="p-button-secondary p-button-text" [routerLink]="['/userFavouriteGameList', userId]">See all details</button>
+                <ng-template #emptyList>
+                    <div class="no-result">
+                        No results found
+                    </div>
+                </ng-template>
             </div>
         </div>
     </div>
