--- a/frontend/src/app/components/user-profile/generic-user-game-list/generic-user-game-list.component.css
+++ b/frontend/src/app/components/user-profile/generic-user-game-list/generic-user-game-list.component.css
@@ -230,7 +230,13 @@ input::placeholder {
     justify-content: center;
     height: 100%;
 }
-
+.game-main{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
 .game-grid-item .game-description{
     margin-bottom: 1rem;
 }
@@ -244,7 +250,7 @@ input::placeholder {
     align-items: center;
 }
 
-.game-grid-action {
+.game-grid-down {
     margin-bottom: 0;
 }
 .game-user-rating , .delete-button{
@@ -252,17 +258,6 @@ input::placeholder {
     justify-content: center;
     align-items: center;
 }
-
-/* 
-.game-grid-head{
-    margin-bottom: 1rem;
-    position: relative;
-}
-
-.img, .hex{
-    position: absolute;
-    vertical-align: bottom;
-} */
 
 @media screen and (max-width: 470px) {
     .flex-col.md\:flex-row {
@@ -275,14 +270,14 @@ input::placeholder {
     .game-grid-item img {
       max-width: 90%; 
     }
-    .game-grid-action 
+    .game-grid-down 
     {
        flex-direction: column;
     }
 }
 
 @media screen and (max-width: 1100px) {
-    .game-grid-action 
+    .game-grid-down 
     {
        flex-direction: column;
     }
