--- a/frontend/src/app/components/user-profile/profile/profile.component.html
+++ b/frontend/src/app/components/user-profile/profile/profile.component.html
@@ -2,46 +2,42 @@
     <div class="data-box">
         <!-- Profil usera: {{userId}}
         <p *ngIf="isLoggedInUserProfile">To także jest twój własny profil</p> -->
-        <div class="header"> USER PROFILE</div>
+        <div class="header top"> USER PROFILE</div>
         <div class="user">
             <div class="user-left-details">
-                <div class="image" style="width: 0px">
-                    <img src="../../../../assets/images/avatars/avatar2.svg" style="width: 150px"/>
+                <div class="image">
+                    <img src="../../../../assets/images/avatars/avatar2.svg"/>
                 </div>
-                <div class="user-add-button">
+                <div *ngIf="!isLoggedInUserProfile" class="user-add-button">
                     <button pButton class="p-button-secondary p-button-text">Add user to favourite</button>
                 </div>
             </div>
             <div class="user-right-details">
-                <div class="user-nickname">User: {{userInfo.nickName}}</div>
-                <div class="user-email">Email: {{userInfo.email}}</div>
+                <p class="user-info-head">Details:</p>
+                <p class="user-nickname"><span class="bold">Nickname:</span> {{userInfo.nickName}}</p>
+                <p class="user-email"><span class="bold">Email:</span> {{userInfo.email}}</p>
             </div>
         </div>
+        <div class="header-down">
+            <h3> User's games </h3>
+        </div>
         <div class="user-data-box">
-            <div class="header">
-                <h3> User's games </h3>
-            </div>
             <div class="grid detail-box">
                 <ng-container *ngIf="userInfo.userBoardGames.length > 0 ; else emptyList" >
-                    <ng-container *ngFor="let game of userGameListFirst5; let i = index">
-                        <div class="col-6 md:col-4 lg:col-3 xl:col-2">
-                            <div class="game" >
-                                <div class="image-box">
-                                    <img [src]="game.imageUrl" [alt]="game.name" [routerLink]="['/games', game.boardGameId]"/>
-                                </div>
-                                <div class="game-name"> 
-                                    {{game.name}}
-                                </div>
+                    <div *ngFor="let game of userGameListFirst5" class="col-6 md:col-4 lg:col-3 xl:col-2">
+                        <div class="game" >
+                            <div class="image-box">
+                                <img [src]="game.imageUrl" [alt]="game.name" [routerLink]="['/games', game.boardGameId]"/>
+                            </div>
+                            <div class="game-name"> 
+                                {{game.name}}
                             </div>
                         </div>
-                        <ng-container *ngIf="i === userGameListFirst5.length - 1 && userGameListFirst5.length < userInfo.userBoardGames.length">
-                            <div class="ellipsis"[routerLink]="['/userGameList', userId]">...</div>
-                        </ng-container>
+                    </div>
                     </ng-container>
                     <div class="button">
-                        <button pButton class="p-button-secondary p-button-text" [routerLink]="['/userGameList', userId]">See all details</button>
+                        <button pButton class="p-button-secondary p-button-text" [routerLink]="['/userGameList', userId]">See more</button>
                     </div>
-                </ng-container>
                 <ng-template #emptyList>
                     <div class="no-result">
                         No results found
@@ -49,13 +45,10 @@
                 </ng-template>
             </div>
         </div>
-        <div class="cont-2">
-
+        <div class="header-down">
+            <h3> User's favourite games </h3>
         </div>
         <div class="user-data-box">
-            <div class="header">
-                <h3> User's favourite games </h3>
-            </div>
             <div class="grid detail-box">
                 <ng-container *ngIf="userInfo.userBoardGames.length > 0 ; else emptyList" >
                     <ng-container *ngFor="let game of userFavGameListFirst5; let i = index">
@@ -74,7 +67,7 @@
                         </ng-container>
                     </ng-container>
                     <div class="button">
-                        <button pButton class="p-button-secondary p-button-text" [routerLink]="['/userFavouriteGameList', userId]">See all details</button>
+                        <button pButton class="p-button-secondary p-button-text" [routerLink]="['/userFavouriteGameList', userId]">See more</button>
                     </div>
                 </ng-container>
                 <ng-template #emptyList>
