--- a/frontend/src/app/components/user-profile/profile/profile.component.html
+++ b/frontend/src/app/components/user-profile/profile/profile.component.html
@@ -1,18 +1,16 @@
 <div class="cont">
     <div class="data-box">
-        <!-- Profil usera: {{userId}}
-        <p *ngIf="isLoggedInUserProfile">To także jest twój własny profil</p> -->
         <div class="header top">
             <p> USER PROFILE </p>
             <ng-container *ngIf="!isLoggedInUserProfile">
                 <ng-container *ngIf="!isUserInFavList; else notInUserList">
                     <div class="user-button">
-                        <button pButton type="button" icon="pi pi-user-plus" pTooltip="Add user to favourite" class="p-button-secondary p-button-text"></button> 
+                        <button pButton type="button" icon="pi pi-user-plus" pTooltip="Add user to friends" class="p-button-secondary p-button-text" (click)="addUserToFavList()"></button> 
                     </div>   
                 </ng-container>
                 <ng-template #notInUserList>
                     <div class="user-button"> 
-                        <button pButton type="button" icon="pi pi-user-minus" class="p-button-secondary p-button-text" pTooltip="Remove user from favourite" ></button>
+                        <button pButton type="button" icon="pi pi-user-minus" class="p-button-danger p-button-text" pTooltip="Remove user from friends" (click)="removeUserFromFavList(this.userId)" ></button>
                     </div>  
                 </ng-template>  
             </ng-container>
@@ -26,11 +24,45 @@
             <div class="user-right-details">
                 <p class="user-info-head">Details:</p>
                 <p class="user-nickname"><span class="bold">Nickname:</span> {{userInfo.nickName}}</p>
-                <p class="user-email"><span class="bold">Email:</span> {{userInfo.email}}</p>
             </div>
         </div>
+        <div class="header-down-fav">
+            <h3> Friends </h3>
+        </div>
+        <ng-container *ngIf="userInfo.favouriteUsers.length > 0 ; else emptyList" >
+            <p-table [value]="userFavUsersFirst3" [tableStyle]="{ 'min-width': '10rem' }">
+                <ng-template pTemplate="header">
+                    <tr>
+                        <th>NickName</th>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-user>
+                    <tr>
+                        <td *ngIf="isLoggedInUserProfile; else notUserProfile" class="user-profile">
+                            <span class="user-name">{{ user.nickName }}</span>
+                            <span><button pButton type="button" icon="pi pi-user-minus" class="p-button-danger p-button-text" pTooltip="Remove user from friends" (click)="removeUserFromFavList(user.favUserId)" ></button></span>
+                        </td>
+                        <ng-template #notUserProfile>
+                            <td>
+                                <span>{{ user.nickName }}</span>
+                                <!-- <span pTooltip="Go to user profile"  [routerLink]="['/userProfile', user.favUserId]">{{ user.nickName }}</span> -->
+                            </td>
+                        </ng-template>
+                    </tr>
+                </ng-template>
+            </p-table>
+            <div class="button-fav">
+                <button pButton class="p-button-secondary p-button-text" [routerLink]="['/userFavouriteUserList', userId]">See more</button>
+            </div>
+        </ng-container>
+        <ng-template #emptyList>
+            <div class="no-result">
+                No results found
+            </div>
+        </ng-template>
+
         <div class="header-down">
-            <h3> User's games </h3>
+            <h3> User's board game collection </h3>
         </div>
         <div class="user-data-box">
             <div class="grid detail-box">
@@ -57,7 +89,7 @@
             </div>
         </div>
         <div class="header-down">
-            <h3> User's favourite games </h3>
+            <h3> Favourite board games </h3>
         </div>
         <div class="user-data-box">
             <div class="grid detail-box">
