--- a/frontend/src/app/components/game/game.component.html
+++ b/frontend/src/app/components/game/game.component.html
@@ -1,78 +1,6 @@
 <div class="data-box">  
-    <p-dataView #dv [value]="games" [paginator]="true" [rows]="10" [rowsPerPageOptions]="[10, 25, 50, 100]" filterBy="name">
-        <ng-template pTemplate="header">
-            <div class="flex flex-col md:flex-row justify-content-between">
-                <div class="mb-2 md:mb-0">
-                <span class="p-input-icon-left mb-2 md:mb-0 search">
-                    <i class="pi pi-search"></i>
-                    <input type="search" pInputText placeholder="Search" (input)="dv.filter($any($event).target.value)">
-                </span>
-                </div>
-                <div class="md:ml-2">
-                    <p-dataViewLayoutOptions></p-dataViewLayoutOptions>
-                </div>
-            </div>
-        </ng-template>
-        <ng-template let-game pTemplate="listItem">
-            <div class="col-12">
-                <div class = "game-list-item">
-                    <div class="image-box">
-                        <img [src]="game.imageUrl" [alt]="game.name" [routerLink]="['/games', game.id]"/>
-                    </div>
-                    <div class= "game-list-detail">
-                        <div class="game-name" [routerLink]="['/games', game.id]">{{game.name}}</div>
-                        <div class="game-rating"><i class="pi pi-star-fill"></i> Rating: <span class="rating-value">{{game.rating === 0 ? '-' : game.rating}}</span>
-                        </div>
-                        <div class="game-description">{{game.description}}</div>
-                    </div> 
-                    <div class="game-list-button" *ngIf="(isLoggedIn$ | async) as isLoggedIn; else notLoggedIn">
-                        <ng-container *ngIf="game.isInUserList; then deleteGame; else addGame"></ng-container>   
-                        <ng-template #addGame>
-                            <p-button *ngIf="!game.isInUserList" severity="success"  label="Add to list" icon="pi pi-plus" iconPos="right" (onClick)="openAddForm(game.id, game.name)"></p-button>  
-                            <app-game-add-form (addedGameEvent)="onAddGameEvent($event)" *ngIf="addGameFormService.getIsOpen() &&  addGameFormService.getSelectedGameId() === game.id; else noForm" [gameId]="addGameFormService.getSelectedGameId()" [gameName]="addGameFormService.getSelectedGameName()" class="overlay"></app-game-add-form>
-                            <ng-template #noForm>
-                            </ng-template>
-                        </ng-template>                     
-                        <ng-template #deleteGame>
-                            <p-button *ngIf="game.isInUserList"  severity="danger" label="Remove" icon="pi pi-minus" iconPos="right" (onClick)="deleteGameFromList(game.id)"></p-button>
-                        </ng-template>
-                    </div>
-                    <ng-template #notLoggedIn>
-                        <p-button label="Add to list" severity="success"  icon="pi pi-plus" iconPos="right" [routerLink]="['/login']"></p-button>
-                    </ng-template>
-                </div>
-            </div>
-        </ng-template>
-        <ng-template let-game pTemplate="gridItem">
-            <div class="col-12 md:col-6 lg:col-4 xl:col-3">
-                <div class="game-grid-item card">
-                     <div class="game-grid-detail">
-                        <div class="image-box">
-                            <img [src]=" game.imageUrl" [alt]="game.name" [routerLink]="['/games', game.id]"/>
-                        </div>
-                        <div class="game-name" [routerLink]="['/games', game.id]">{{game.name}}</div>
-                        <div class="game-description">{{game.description}}</div>
-                    </div>
-                    <div class="game-grid-action">
-                        <span class="game-rating"><i class="pi pi-star-fill"></i>Rating: {{game.rating}}</span>
-                        <div class="game-list-button" *ngIf="(isLoggedIn$ | async) as isLoggedIn; else notLoggedIn">
-                            <ng-container *ngIf="game.isInUserList; then deleteGame; else addGame"></ng-container>   
-                            <ng-template #addGame>
-                                <p-button *ngIf="!game.isInUserList" severity="success"  label="Add to list" icon="pi pi-plus" iconPos="right" (onClick)="openAddForm(game.id, game.name)"></p-button>  
-                                <app-game-add-form  (addedGameEvent)="onAddGameEvent($event)" *ngIf="addGameFormService.getIsOpen() &&  addGameFormService.getSelectedGameId() === game.id; else noForm" [gameId]="addGameFormService.getSelectedGameId()" [gameName]="addGameFormService.getSelectedGameName()" class="overlay"></app-game-add-form>
-                                <ng-template #noForm>
-                                </ng-template>
-                            </ng-template>                     
-                            <ng-template #deleteGame>
-                                <p-button *ngIf="game.isInUserList"  severity="danger" label="Remove" icon="pi pi-minus" iconPos="right" (onClick)="deleteGameFromList(game.id)"></p-button>
-                            </ng-template>
-                        </div>
-                        <ng-template #notLoggedIn>
-                            <p-button severity="success" label="Add to list" icon="pi pi-plus" iconPos="right" [routerLink]="['/login']"></p-button>
-                        </ng-template>
-                     </div> 
-                </div>
-            </div>
-        </ng-template>
-    </p-dataView>
+    <app-game-generic
+    (changeInDataEvent)="onChangeGameEvent($event)"
+    [games]="games">
+    </app-game-generic>
 </div>
