add forbidden and not found page

--- a/frontend/src/app/components/nav/forbidden-page/forbidden-page.component.html
+++ b/frontend/src/app/components/nav/forbidden-page/forbidden-page.component.html
@@ -1,1 +1,6 @@
-<p>forbidden-page works!</p>
+<div class="cont">
+    <h1>FORBIDDEN PAGE!</h1>
+    <p id="err">ERROR 403</p>
+    <p>You don't have acces to this page!</p>
+    <button pButton type="button" class="p-button-rounded p-button-secondary p-button-text" [routerLink]="[('/home')]">Return back to home</button>
+</div>
