--- a/frontend/src/app/components/nav/not-found-page/not-found-page.component.html
+++ b/frontend/src/app/components/nav/not-found-page/not-found-page.component.html
@@ -1,1 +1,5 @@
-<p>not-found-page works!</p>
+<div class="cont">
+    <h1>PAGE NOT FOUND!</h1>
+    <p>ERROR 404</p>
+    <button pButton type="button" class="p-button-rounded p-button-secondary p-button-text" [routerLink]="[('/home')]">Return back to home</button>
+</div>
